# ai-agents

./: .gitignore  README.md
agent-without-framework/: .gitignore  README.md  main.py  pyproject.toml
agent-without-framework/runbook/: 01_basic_script.py  02_agent_class.py  03_define_tools.py  04_tools_execution.py  05_chat_method.py  06_interactive_chat.py  07_adding_personality.py
first-agent/: 20251104_121135_research_output.txt  README.md  WIKI_TOOL_ROOT_CAUSE_ANALYSIS.md  main.py  pyproject.toml  test_agent_wiki.py  test_dynamic.py  test_input.py  test_original_config.py  test_simple.py  test_wiki_issues.py  tools.py
